--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "css-loader": "^4.3.0",
+    "dart-sass": "^1.25.0",
     "hamburgers": "^1.1.3",
     "json-loader": "^0.5.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-hamburgers": "^1.0.0",
     "react-scripts": "3.4.3",
