--- a/src/img/projects.json
+++ b/src/img/projects.json
@@ -14,66 +14,66 @@
         "mainBanner": "Bannerdesktop-1920.png",
         "bannerMobile": "mobile/bannnermobile-480.jpg"
     },
-    "projects":[
+    "projectsId": {
+        "01":
         {
-            "id": "01",
             "name": "Yum",
             "Title": "Project: YumBox App Mobile",
             "Detail": "UX/UI Design - Brand Design - Graphic Design"
         },
+        "02":
         {
-            "id": "02",
             "name": "STB",
             "Title": "Project: Lookbook Redesign",
             "Detail": "UI Design"
         },
+        "03":
         {
-            "id": "03",
             "name": "SDO",
             "Title": "Project: Season Redesign",
             "Detail": "UX/UI Design - Brand Design - Graphic Design"
         },
+        "04":
         {
-            "id": "04",
             "name": "Colores",
             "Title": "Project: Editorial Libro de los Colores",
             "Detail": "Editorial Design - Graphic Design"
         },
+        "05":
         {
-            "id": "05",
             "name": "HCB",
             "Title": "Project: Newsletter Sketch",
             "Detail": "UI Design"
         },
+        "06":
         {
-            "id": "06",
             "name": "Calza",
             "Title": "Project: Web Design",
             "Detail": "UX/UI Design - Content Creation"
         },
+        "07":
         {
-            "id": "07",
             "name": "Malteadas",
             "Title": "Project: Brand Identity",
             "Detail": "Content Creation - UX/UI Design - Art Director"
         },
+        "08":
         {
-            "id": "08",
             "name": "Bonf",
             "Title": "Project: Corporate Manual",
             "Detail": "Editorial Design - Graphic Design"
         },
+        "09":
         {
-            "id": "09",
             "name": "CHH",
             "Title": "Project: Logo Design",
             "Detail": "Personal brand - Graphic Design"
         },
+        "10":
         {
-            "id": "10",
             "name": "Yumlato",
             "Title": "Project: Brand Identity",
             "Detail": "Graphic proposal - Graphic Design"
         }    
-    ]
+    }
 }
