--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "json-loader": "^0.5.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-animated-css": "^1.2.1",
     "react-dom": "^16.13.1",
-    "react-hamburgers": "^1.0.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.27.11",
     "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
     "react-use-measure": "^2.0.1",
     "sass-loader": "^10.0.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0",
-    "swiper": "^6.3.1",
+    "swiper": "^6.3.2",
     "wouter": "^2.5.1"
   },
   "scripts": {
