--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-hash-link": "^2.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
     "react-spring": "^8.0.27",
