--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.6.6",
     "css-loader": "^4.3.0",
     "dart-sass": "^1.25.0",
     "hamburgers": "^1.1.3",
@@ -13,6 +15,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-measure": "^2.5.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.0",
     "react-scripts": "3.4.3",
