--- a/package.json
+++ b/package.json
@@ -8,24 +8,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
-    "css-loader": "^4.3.0",
     "dart-sass": "^1.25.0",
-    "hamburgers": "^1.1.3",
-    "json-loader": "^0.5.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loading-overlay": "^1.0.1",
     "react-measure": "^2.5.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.0",
     "react-scripts": "3.4.3",
-    "react-slick": "^0.27.11",
     "react-spring": "^8.0.27",
-    "react-transition-group": "^4.4.1",
-    "react-use-measure": "^2.0.1",
     "sass-loader": "^10.0.2",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^5.2.0",
     "swiper": "^6.3.2",
     "wouter": "^2.5.1"
   },
@@ -52,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "gh-pages": "^3.1.0",
     "style-loader": "^1.2.1"
   }
 }
