--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rafaeltchq.github.io/portfolioval.react/",
   "name": "portfolio.react",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +24,8 @@
     "wouter": "^2.5.1"
   },
   "scripts": {
+    "predeloy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
