--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://rafaeltchq.github.io/portfolioval.react",
   "name": "portfolio.react",
   "version": "0.1.0",
   "private": true,
