--- a/package.json
+++ b/package.json
@@ -1,31 +1,16 @@
 {
-  "homepage": "http://rafaeltchq.github.io/portfolioval.react",
+  "homepage": "https://rafaeltchq.github.io/portfolioval.react/",
   "name": "portfolio.react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.6.6",
-    "dart-sass": "^1.25.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-loading-overlay": "^1.0.1",
-    "react-measure": "^2.5.2",
-    "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.2.0",
-    "react-scripts": "3.4.3",
-    "react-spring": "^8.0.27",
-    "sass-loader": "^10.0.2",
-    "swiper": "^6.3.2",
-    "wouter": "^2.5.1"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "scripts": {
-    "predeloy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,7 +33,19 @@
     ]
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.6.6",
+    "css-loader": "^3.4.2",
     "gh-pages": "^3.1.0",
-    "style-loader": "^1.2.1"
+    "react-loading-overlay": "^1.0.1",
+    "react-measure": "^2.5.2",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.0",
+    "react-scripts": "^3.4.4",
+    "react-spring": "^8.0.27",
+    "sass": "^1.28.0",
+    "style-loader": "^1.2.1",
+    "swiper": "^6.3.2",
+    "wouter": "^2.5.1"
   }
 }
