--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "homepage": "https://rafaeltchq.github.io/portfolioval.react/",
+  "homepage": "http://localhost:3000",
   "name": "portfolio.react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,18 +36,17 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.2.2",
-    "antd": "^4.6.6",
-    "css-loader": "^3.4.2",
+    "antd": "^4.7.3",
+    "css-loader": "^5.0.0",
     "gh-pages": "^3.1.0",
     "react-loading-overlay": "^1.0.1",
     "react-measure": "^2.5.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.0",
     "react-spring": "^8.0.27",
     "sass": "^1.28.0",
-    "style-loader": "^1.2.1",
-    "swiper": "^6.3.2",
-    "wouter": "^2.5.1"
+    "style-loader": "^2.0.0",
+    "swiper": "^6.3.5"
   }
 }
